[package]
name = "video_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# For generating random values like random image and effect selection
rand = "0.8"

# For handling error management better (optional, but useful for cleaner code)
anyhow = "1.0"

# (Optional) For parsing and handling JSON input for complex configurations
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
